--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-3">
       <article class="action-card relative">
         <div class="main bad-b-1-2">
-          <img class="img-flex" srcset="images/blue-bolt-975.jpg 975w, images/blue-bolt-480.jpg 480w" sies="(min-width: 60em) 33vw, (min-width: 38em) 50vw, 100vw" src="images/blue-bolt-480.jpg" alt="">
+          <img class="img-flex" srcset="images/blue-bolt-975.jpg 975w, images/blue-bolt-480.jpg 480w" sizes="(min-width: 60em) 33vw, (min-width: 38em) 50vw, 100vw" src="images/blue-bolt-480.jpg" alt="">
         </div>
 
         <header class="gutter-1-2">
@@ -33,12 +33,17 @@
             </li>
             <li>
               <button class="btn action-btn">
-                <i class="icon i-1"><svg><use xlink:href="images/icons.svg#heart"></use></svg></i>
+                <i class="icon i-1"><svg><use xlink:href="images/icons.svg#download"></use></svg></i>
               </button>
             </li>
           </menu>
 
           <menu class="list-group-inline action-tools-bottom island-1-2 push-1-4">
+            <li>
+              <button class="btn action-btn">
+                <i class="icon i-1"><svg><use xlink:href="images/icons.svg#heart"></use></svg></i>
+              </button>
+            </li>
             <li>
               <button class="btn action-btn">
                 <i class="icon i-1"><svg><use xlink:href="images/icons.svg#share"></use></svg></i>
@@ -52,7 +57,6 @@
           </menu>
         </footer>
       </article>
-
 
     </div>
   </div>
